[lib]
path = "src/lib.rs"

[package]
name = "peermerge"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
automerge = { version = "0.3.0", features = ["wasm"] }
hypercore-protocol = { git = "https://github.com/ttiurani/hypercore-protocol-rs", branch = "tokio", default-features = false, features = ["v10"] }
random-access-storage = { git = "https://github.com/ttiurani/random-access-storage", branch = "tokio" }
random-access-memory = { git = "https://github.com/ttiurani/random-access-memory", branch = "tokio" }
anyhow = "1.0.28"
data-encoding = "2.3.3"
async-std = { version = "1.9.0", features = ["attributes", "unstable"], optional = true }
tokio = { version = "1.25.0", features = ["rt", "sync"], optional = true }
futures = "0.3.25"
# For now this needs to be locked to match downstream build system version
wasm-bindgen-futures = { version = "=0.4.32", optional = true }
derivative = "2.2.0"
dashmap = "5.4.0"
tracing = "0.1.37"
chacha20poly1305 = "0.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
random-access-disk = { git = "https://github.com/ttiurani/random-access-disk", branch = "tokio" }

[dev-dependencies]
sluice = "0.5.5"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
criterion = { version = "0.4", features = ["async_std", "async_tokio"] }
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.1.0"

[features]
default =  ["tokio-runtime", "wasm-bindgen"]
wasm-bindgen = [
  "wasm-bindgen-futures", 
  "hypercore-protocol/wasm-bindgen"
]
async-std-runtime = ["async-std", "hypercore-protocol/async-std", "random-access-disk/async-std"]
tokio-runtime = ["tokio", "hypercore-protocol/tokio", "random-access-disk/tokio"]

[[bench]]
name = "three_peers_separate"
harness = false
