[lib]
path = "src/lib.rs"

[package]
name = "peermerge"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
automerge = { git = "https://github.com/automerge/automerge", rev = "00827f1" }
hypercore-protocol = { git = "https://github.com/datrs/hypercore-protocol-rs", branch = "v10", default-features = false, features = ["cache", "sparse"] }
random-access-storage = "5.0.0"
random-access-memory = "3.0.0"
thiserror = "1"
data-encoding = "2.3.3"
futures = "0.3.25"
wasm-bindgen-futures = { version = "=0.4.33", optional = true }
derivative = "2.2.0"
dashmap = "5.5.3"
tracing = "0.1.37"
chacha20poly1305 = "0.10.1"
compact-encoding = "1"
uuid = "1.4.1"
derive_builder = "0.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
random-access-disk = { version = "3.0.0", default-features = false, features = ["sparse"] }
tokio = { version = "1.27.0", features = ["rt", "sync"], optional = true }
async-std = { version = "1.9.0", features = ["attributes", "unstable"], optional = true }

[dev-dependencies]
sluice = "0.5.5"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
criterion = { version = "0.4", features = ["async_std", "async_tokio"] }
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.1.0"
anyhow = "1.0.28"
rand = "0.8"

[features]
default =  ["tokio-runtime", "wasm-bindgen"]
wasm-bindgen = [
  "wasm-bindgen-futures", 
  "hypercore-protocol/wasm-bindgen",
  "automerge/wasm",
  "uuid/js"
]
log = ["tracing/log"]
async-std-runtime = ["async-std", "hypercore-protocol/async-std", "random-access-disk/async-std"]
tokio-runtime = ["tokio", "hypercore-protocol/tokio", "random-access-disk/tokio"]

[[bench]]
name = "three_peers_separate"
harness = false
